--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,9 +283,10 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100vh;
-  background: url("../img/hero-bg.jpg") top right no-repeat;
+  height: 155vh;
+  background: linear-gradient( rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),url("../img/myimage.jpg");
   background-size: cover;
+  background-position:center;
   position: relative;
 }
 
@@ -399,7 +400,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #0563bb;
+  background:#0678e3;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -515,10 +516,10 @@ section {
 }
 
 .skills .progress-bar {
-  width: 1px;
+  width: 11px;
   height: 10px;
   transition: 0.9s;
-  background-color: #0563bb;
+  background-color:#067ded;
 }
 
 /*--------------------------------------------------------------
