--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1228,3 +1228,49 @@ section {
 #footer .credits {
   font-size: 13px;
 }
+
+/* .cv{
+  width: 200px;
+  height: 200px;
+  box-shadow: 16px 14px 20px #0000008c;
+  border-radius: 10px;
+  background: #181818;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+cv::before{
+  content: "";
+  background-image: conic-gradient(
+    #ff0052 20deg,
+    transparent 120deg
+  );
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  animation: rotate linear 2s;
+}
+
+cv::after{
+content: "Download Resume";
+width: 190px;
+height: 190px;
+background: #101010;
+position: absolute;
+border-radius: 10px;
+display: flex;
+justify-content: center;
+align-items: center;
+color: #ff0052;
+font-size: larger;
+
+} */
+
+/* .section-title a:hover{
+  color: #255784;
+  background: #2196f3;
+  box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 8 0px #2196f3;
+} */
