--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,7 @@ h6 {
 #hero {
   width: 100%;
   height: 155vh;
-  background: linear-gradient( rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),url("../img/myimage.jpg");
+  background: linear-gradient( rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),url("../img/background.jpg");
   background-size: cover;
   background-position:center;
   position: relative;
