--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,8 +284,9 @@ h6 {
 #hero {
   width: 100%;
   height: 155vh;
-  background: linear-gradient( rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),url("../img/background.jpg");
+  background: url("../img/copy1.jpg");
   background-size: cover;
+
   background-position:center;
   position: relative;
 }
@@ -298,7 +299,7 @@ h6 {
 
 #hero:before {
   content: "";
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 0.6);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -311,7 +312,7 @@ h6 {
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
-  color: #45505b;
+  color:  #45505b;
 }
 
 #hero p {
@@ -331,9 +332,9 @@ h6 {
 }
 
 #hero .social-links a {
-  font-size: 24px;
+  font-size: 35px;
   display: inline-block;
-  color: #45505b;
+  color:  #45505b;
   line-height: 1;
   margin-right: 20px;
   transition: 0.3s;
